[package]
name = "pokerkit"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = "0.26"
strum_macros = "0.26"
rand = "0.8"
regex = "1"
chrono = "0.4"
num-traits = "0.2"
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
itertools = "0.13"
phf = { version = "0.11", features = ["macros"] }
num-bigint = "0.4"
once_cell = "1.19"

[build-dependencies]
phf_codegen = "0.11"

